# Comment-Emojis-Reloaded

./: CMakeLists.txt  changelog.md  mod.json
src/: emoji-picker.cpp  emoji-picker.hpp  emojis.hpp  main.cpp  scroll-layer.hpp  utils.hpp
